Major updates: improved transpiler integration, context management, and project structure